vertical align fixed

--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -97,7 +97,7 @@ html, body {
   }
   .m-divider-text {
       font-size: 18px;
-      margin-top:-14px;
+      margin-top:-12px;
       display: block;
       position:absolute;
       transform:translateX(-50%);
